--- a/oficialia/package.json
+++ b/oficialia/package.json
@@ -23,9 +23,18 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.3",
     "@auth0/angular-jwt": "^5.2.0",
+    "@fullcalendar/angular": "^6.1.16",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.4.2",
+    "@fullcalendar/timegrid": "^4.4.2",
     "angular-oauth2-oidc": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "dhtmlx-suite": "^5.0.1",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
