--- a/oficialia/package.json
+++ b/oficialia/package.json
@@ -18,7 +18,7 @@
     "@angular/core": "^19.1.0",
     "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.1.0",
-    "@angular/material": "^19.1.1",
+    "@angular/material": "^19.2.1",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
@@ -30,10 +30,13 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "angular-oauth2-oidc": "^19.0.0",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "dhtmlx-suite": "^5.0.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
@@ -54,5 +57,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 19.1.3.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
