--- a/oficialia/package.json
+++ b/oficialia/package.json
@@ -29,11 +29,13 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "angular-calendar": "^0.31.1",
     "angular-oauth2-oidc": "^19.0.0",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dhtmlx-suite": "^5.0.1",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
